--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>C*zinho hoje?</p>
     <div>
       <button>
-        <a href="https://link.com">Sim</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Sim</a>
       </button>
       <button id="no">Não</button>
     </div>
